[gd_scene load_steps=2 format=3 uid="uid://dv80q7jwkx20r"]

[ext_resource type="Script" uid="uid://cw83brmd2u3nt" path="res://addons/3d_player_controller/debug.gd" id="1_nyx4n"]

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nyx4n")

[node name="Panel1" type="Panel" parent="."]
layout_mode = 0
offset_right = 216.0
offset_bottom = 720.0

[node name="Label22" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_right = 179.0
offset_bottom = 23.0
text = "is_aiming"

[node name="IsAiming" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_right = 216.0
offset_bottom = 24.0

[node name="Label4" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 24.0
offset_right = 179.0
offset_bottom = 47.0
text = "is_animation_locked"

[node name="IsAnimationLocked" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 24.0
offset_right = 216.0
offset_bottom = 48.0

[node name="Label29" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 48.0
offset_right = 179.0
offset_bottom = 71.0
text = "is_casting"

[node name="IsCasting" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 48.0
offset_right = 216.0
offset_bottom = 72.0

[node name="Label19" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 72.0
offset_right = 179.0
offset_bottom = 95.0
text = "is_climbing"

[node name="IsClimbing" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 72.0
offset_right = 216.0
offset_bottom = 96.0

[node name="Label24" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 96.0
offset_right = 179.0
offset_bottom = 119.0
text = "is_crawling"

[node name="IsCrawling" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 96.0
offset_right = 216.0
offset_bottom = 120.0

[node name="Label5" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 120.0
offset_right = 179.0
offset_bottom = 143.0
text = "is_crouching"

[node name="IsCrouching" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 120.0
offset_right = 216.0
offset_bottom = 144.0

[node name="Label6" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 144.0
offset_right = 179.0
offset_bottom = 167.0
text = "is_double_jumping"

[node name="IsDoubleJumping" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 144.0
offset_right = 216.0
offset_bottom = 168.0

[node name="Label32" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 168.0
offset_right = 179.0
offset_bottom = 191.0
text = "is_driving"

[node name="IsDriving" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 168.0
offset_right = 216.0
offset_bottom = 192.0

[node name="Label26" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 192.0
offset_right = 179.0
offset_bottom = 215.0
text = "is_falling"

[node name="IsFalling" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 192.0
offset_right = 216.0
offset_bottom = 216.0

[node name="Label25" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 216.0
offset_right = 179.0
offset_bottom = 239.0
text = "is_firing"

[node name="IsFiring" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 216.0
offset_right = 216.0
offset_bottom = 240.0

[node name="Label7" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 240.0
offset_right = 169.0
offset_bottom = 263.0
text = "is_flying"

[node name="IsFlying" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 240.0
offset_right = 216.0
offset_bottom = 264.0

[node name="Label18" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 288.0
offset_right = 169.0
offset_bottom = 311.0
text = "is_holding"

[node name="IsHolding" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 288.0
offset_right = 216.0
offset_bottom = 312.0

[node name="Label28" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 312.0
offset_right = 179.0
offset_bottom = 335.0
text = "is_holding_fishing_rod"

[node name="IsHoldingFishingRod" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 312.0
offset_right = 216.0
offset_bottom = 336.0

[node name="Label8" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 264.0
offset_right = 179.0
offset_bottom = 287.0
text = "is_hanging"

[node name="IsHanging" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 264.0
offset_right = 216.0
offset_bottom = 288.0

[node name="Label16" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 336.0
offset_right = 179.0
offset_bottom = 359.0
text = "is_holding_rifle"

[node name="IsHoldingRifle" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 336.0
offset_right = 216.0
offset_bottom = 360.0

[node name="Label17" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 360.0
offset_right = 179.0
offset_bottom = 383.0
text = "is_holding_tool"

[node name="IsHoldingTool" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 360.0
offset_right = 216.0
offset_bottom = 384.0

[node name="Label9" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 384.0
offset_right = 179.0
offset_bottom = 407.0
text = "is_jumping"

[node name="IsJumping" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 384.0
offset_right = 216.0
offset_bottom = 408.0

[node name="Label10" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 408.0
offset_right = 169.0
offset_bottom = 431.0
text = "is_kicking_left"

[node name="IsKickingLeft" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 408.0
offset_right = 216.0
offset_bottom = 432.0

[node name="Label11" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 432.0
offset_right = 169.0
offset_bottom = 455.0
text = "is_kicking_right"

[node name="IsKickingRight" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 432.0
offset_right = 216.0
offset_bottom = 456.0

[node name="Label12" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 456.0
offset_right = 179.0
offset_bottom = 479.0
text = "is_punching_left"

[node name="IsPunchingLeft" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 456.0
offset_right = 216.0
offset_bottom = 480.0

[node name="Label13" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 480.0
offset_right = 179.0
offset_bottom = 503.0
text = "is_punching_right"

[node name="IsPunchingRight" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 480.0
offset_right = 216.0
offset_bottom = 504.0

[node name="Label30" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 504.0
offset_right = 179.0
offset_bottom = 527.0
text = "is_reeling"

[node name="IsReeling" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 504.0
offset_right = 216.0
offset_bottom = 528.0

[node name="Label20" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 528.0
offset_right = 179.0
offset_bottom = 551.0
text = "is_running"

[node name="IsRunning" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 528.0
offset_right = 216.0
offset_bottom = 552.0

[node name="Label31" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 576.0
offset_right = 179.0
offset_bottom = 599.0
text = "is_skateboarding"

[node name="IsSkateboarding" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 576.0
offset_right = 216.0
offset_bottom = 600.0

[node name="Label34" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 552.0
offset_right = 179.0
offset_bottom = 575.0
text = "is_shimmying"

[node name="IsShimmying" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 552.0
offset_right = 216.0
offset_bottom = 576.0

[node name="Label14" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 600.0
offset_right = 179.0
offset_bottom = 623.0
text = "is_sprinting"

[node name="IsSprinting" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 600.0
offset_right = 216.0
offset_bottom = 624.0

[node name="Label21" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 624.0
offset_right = 179.0
offset_bottom = 647.0
text = "is_standing"

[node name="IsStanding" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 624.0
offset_right = 216.0
offset_bottom = 648.0

[node name="Label23" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 648.0
offset_right = 179.0
offset_bottom = 671.0
text = "is_swimming"

[node name="IsSwimming" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 648.0
offset_right = 216.0
offset_bottom = 672.0

[node name="IsUsing" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 672.0
offset_right = 216.0
offset_bottom = 696.0

[node name="Label33" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 672.0
offset_right = 179.0
offset_bottom = 695.0
text = "is_using"

[node name="IsWalking" type="CheckBox" parent="Panel1"]
layout_mode = 0
offset_left = 192.0
offset_top = 696.0
offset_right = 216.0
offset_bottom = 720.0

[node name="Label27" type="Label" parent="Panel1"]
layout_mode = 0
offset_left = 9.0
offset_top = 696.0
offset_right = 179.0
offset_bottom = 719.0
text = "is_walking"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 1064.0
offset_right = 1280.0
offset_bottom = 468.0

[node name="EnableChat" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 75.0
offset_right = 216.0
offset_bottom = 31.0
text = "enable_chat"

[node name="EnableClimbing" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 42.0
offset_top = 31.0
offset_right = 215.0
offset_bottom = 62.0
text = "enable_climbing"

[node name="EnableCrouching" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 32.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 93.0
text = "enable_crouching"

[node name="EnableDoubleJump" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 8.0
offset_top = 94.0
offset_right = 216.0
offset_bottom = 125.0
text = "enable_double_jump"

[node name="EnableFlying" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 66.0
offset_top = 126.0
offset_right = 216.0
offset_bottom = 157.0
text = "enable_flying"

[node name="EnableJumping" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 45.0
offset_top = 158.0
offset_right = 216.0
offset_bottom = 189.0
text = "enable_jumping"

[node name="EnableKicking" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 45.0
offset_top = 189.0
offset_right = 216.0
offset_bottom = 220.0
text = "enable_kicking"

[node name="EnablePunching" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 36.0
offset_top = 220.0
offset_right = 216.0
offset_bottom = 251.0
text = "enable_punching"

[node name="EnableSprinting" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 36.0
offset_top = 250.0
offset_right = 216.0
offset_bottom = 281.0
text = "enable_sprinting"

[node name="EnableVibration" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 36.0
offset_top = 281.0
offset_right = 216.0
offset_bottom = 312.0
text = "enable_vibration"

[node name="LockCamera" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 36.0
offset_top = 312.0
offset_right = 216.0
offset_bottom = 343.0
text = "lock_camera"

[node name="LockMovementX" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 30.0
offset_top = 343.0
offset_right = 216.0
offset_bottom = 374.0
text = "lock_movement_x"

[node name="LockMovementY" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 30.0
offset_top = 375.0
offset_right = 216.0
offset_bottom = 406.0
text = "lock_movement_y"

[node name="LockPerspective" type="CheckButton" parent="Panel2"]
layout_mode = 0
offset_left = 30.0
offset_top = 407.0
offset_right = 216.0
offset_bottom = 438.0
text = "lock_perspective"

[node name="GamePaused" type="CheckBox" parent="Panel2"]
layout_mode = 0
offset_left = 192.0
offset_top = 438.0
offset_right = 216.0
offset_bottom = 462.0

[node name="Label28" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 9.0
offset_top = 438.0
offset_right = 179.0
offset_bottom = 461.0
text = "game_paused"

[node name="Coordinates" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 280.0
offset_top = 697.0
offset_right = 1000.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center]X:0.0 Y:0.0 Z:0.0[/center]"
scroll_active = false

[node name="FPS" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1207.0
offset_top = 697.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 0
grow_vertical = 0
text = "FPS: 0000"

[connection signal="toggled" from="Panel2/EnableChat" to="." method="_on_enable_chat_toggled"]
[connection signal="toggled" from="Panel2/EnableClimbing" to="." method="_on_enable_climbing_toggled"]
[connection signal="toggled" from="Panel2/EnableCrouching" to="." method="_on_enable_crouching_toggled"]
[connection signal="toggled" from="Panel2/EnableDoubleJump" to="." method="_on_enable_double_jump_toggled"]
[connection signal="toggled" from="Panel2/EnableFlying" to="." method="_on_enable_flying_toggled"]
[connection signal="toggled" from="Panel2/EnableJumping" to="." method="_on_enable_jumping_toggled"]
[connection signal="toggled" from="Panel2/EnableKicking" to="." method="_on_enable_kicking_toggled"]
[connection signal="toggled" from="Panel2/EnablePunching" to="." method="_on_enable_punching_toggled"]
[connection signal="toggled" from="Panel2/EnableSprinting" to="." method="_on_enable_sprinting_toggled"]
[connection signal="toggled" from="Panel2/EnableVibration" to="." method="_on_enable_vibration_toggled"]
[connection signal="toggled" from="Panel2/LockCamera" to="." method="_on_lock_camera_toggled"]
[connection signal="toggled" from="Panel2/LockMovementX" to="." method="_on_lock_movement_x_toggled"]
[connection signal="toggled" from="Panel2/LockMovementY" to="." method="_on_lock_movement_y_toggled"]
[connection signal="toggled" from="Panel2/LockPerspective" to="." method="_on_lock_perspective_toggled"]
